Added main structure

--- a/template.html
+++ b/template.html
@@ -11,10 +11,39 @@
 
 <body>
     <header>
-
+        
     </header>
     <main>
 
+        <!-- System Section -->
+        <section>
+
+        </section>
+
+        <!-- CPU Section -->
+        <section>
+
+        </section>
+
+        <!--Memory Section -->
+        <section>
+
+        </section>
+
+        <!-- Network Section -->
+        <section>
+
+        </section>
+
+        <!-- Process Section -->
+        <section>
+
+        </section>
+
+        <!-- File Section -->
+        <section>
+
+        </section>
     </main>
     <footer>
         
