Added title and system name

--- a/template.html
+++ b/template.html
@@ -11,12 +11,14 @@
 
 <body>
     <header>
-        
+        <h1> {{ machine_name }} </h1>
     </header>
     <main>
 
         <!-- System Section -->
         <section>
+            <h2>Système</h2>
+            Nom de la machine : {{ machine_name }}
 
         </section>
 
