Completed system section

--- a/template.html
+++ b/template.html
@@ -19,7 +19,9 @@
         <section>
             <h2>Système</h2>
             Nom de la machine : {{ machine_name }}
-
+            Système d'exploitation : {{ os_name }}
+            Uptime : {{ uptime }}
+            Nombre d'utilisateurs : {{ user_nb }}
         </section>
 
         <!-- CPU Section -->
