Added paragraph to text

--- a/template.html
+++ b/template.html
@@ -18,10 +18,10 @@
         <!-- System Section -->
         <section>
             <h2>Système</h2>
-            Nom de la machine : {{ machine_name }}
-            Système d'exploitation : {{ os_name }}
-            Uptime : {{ uptime }}
-            Nombre d'utilisateurs : {{ user_nb }}
+            <p>Nom de la machine : {{ machine_name }}</p>
+            <p>Système d'exploitation : {{ os_name }}</p>
+            <p>Uptime : {{ uptime }}</p>
+            <p>Nombre d'utilisateurs : {{ user_nb }}</p>
         </section>
 
         <!-- CPU Section -->
