--- a/template.html
+++ b/template.html
@@ -26,7 +26,10 @@
 
         <!-- CPU Section -->
         <section>
-
+            <h2>CPU</h2>
+            <p>Nombre de Cœurs : {{ cpu_cores_nb }}</p>
+            <p>Fréquence : {{ cpu_frequency }} GHz</p>
+            <p>Utilisation : {{ cpu_usage }}%</p>
         </section>
 
         <!--Memory Section -->
