--- a/template.html
+++ b/template.html
@@ -27,7 +27,7 @@
         <!-- CPU Section -->
         <section>
             <h2>CPU</h2>
-            <p>Nombre de Cœurs : {{ cpu_cores_nb }}</p>
+            <p>Nombre de cœurs : {{ cpu_cores_nb }}</p>
             <p>Fréquence : {{ cpu_frequency }} GHz</p>
             <p>Utilisation : {{ cpu_usage }}%</p>
         </section>
