Added border background/style

--- a/template.html
+++ b/template.html
@@ -35,8 +35,8 @@
         <!--Memory Section -->
         <section>
             <h2>Mémoire</h2>
-            <p>RAM totale : {{ total_ram }}Go</p>
-            <p>RAM utilisé : {{ ram_usage_nb }} | {{  ram_usage_percentage }}%</p>
+            <p>RAM totale : {{ total_ram }} Go</p>
+            <p>RAM utilisé : {{ ram_usage_nb }} Go | {{ ram_usage_percentage }}%</p>
             <!-- faire barre de progression -->
         </section>
 
@@ -67,7 +67,7 @@
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 
