Fixed spelling error

--- a/template.html
+++ b/template.html
@@ -44,7 +44,7 @@
         <!-- Network Section -->
         <section>
             <h2>Réseau</h2>
-            <p>Adresse IP : {{ ip_adress }}</p>
+            <p>Adresse IP : {{ ip_address }}</p>
         </section>
 
         <!-- Process Section -->
