Added file size

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Système</h2>
             <p>Nom de la machine : SP11-de-Nicolas</p>
             <p>Système d'exploitation : Windows-11-10.0.26200-SP0</p>
-            <p>Heure de démarrage : 2025-12-10 08:53:27.820622</p>
+            <p>Heure de démarrage : 2025-12-10 08:53:27.754018</p>
             <p>Uptime : </p>
             <p>Nombre d'utilisateurs connectés : 1</p>
         </section>
@@ -34,8 +34,8 @@
             <p>Fréquence : 3.42 GHz</p>
             <p>Utilisation :</p>
             <div class="progress-container">
-                <div class="progress-fill" style="width: 17.7%;"></div>
-                <span class="progress-text" style="left: 17.7%;">17.7%</span>
+                <div class="progress-fill" style="width: 11.6%;"></div>
+                <span class="progress-text" style="left: 11.6%;">11.6%</span>
             </div>
 
             <h3>Utilisation CPU par cœur</h3>
@@ -44,8 +44,8 @@
 
                 <label>N°0 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 57.1%;"></div>
-                    <span class="progress-text" style="left: 57.1%;">57.1%</span>
+                    <div class="progress-fill" style="width: 46.9%;"></div>
+                    <span class="progress-text" style="left: 46.9%;">46.9%</span>
                 </div>
 
             </div>
@@ -54,8 +54,8 @@
 
                 <label>N°1 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 36.4%;"></div>
-                    <span class="progress-text" style="left: 36.4%;">36.4%</span>
+                    <div class="progress-fill" style="width: 33.3%;"></div>
+                    <span class="progress-text" style="left: 33.3%;">33.3%</span>
                 </div>
 
             </div>
@@ -64,8 +64,8 @@
 
                 <label>N°2 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 12.1%;"></div>
-                    <span class="progress-text" style="left: 12.1%;">12.1%</span>
+                    <div class="progress-fill" style="width: 6.2%;"></div>
+                    <span class="progress-text" style="left: 6.2%;">6.2%</span>
                 </div>
 
             </div>
@@ -74,8 +74,8 @@
 
                 <label>N°3 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 0.0%;"></div>
-                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
+                    <div class="progress-fill" style="width: 6.2%;"></div>
+                    <span class="progress-text" style="left: 6.2%;">6.2%</span>
                 </div>
 
             </div>
@@ -166,10 +166,10 @@
         <section>
             <h2>Mémoire</h2>
             <p>RAM totale : 15.6 Go</p>
-            <p>RAM utilisé : 13.3 Go</p>
+            <p>RAM utilisé : 13.7 Go</p>
             <div class="progress-container">
-                <div class="progress-fill" style="width: 85.3%;"></div>
-                <span class="progress-text" style="left: 85.3%;">85.3%</span>
+                <div class="progress-fill" style="width: 88.1%;"></div>
+                <span class="progress-text" style="left: 88.1%;">88.1%</span>
             </div>
         </section>
 
@@ -177,7 +177,7 @@
         <section>
             <h2>Réseau</h2>
             <p>Adresse IP : 10.121.72.62</p>
-            <p>DL : 58.7 KB/s | UP : 88.6 KB/s</p>
+            <p>DL : 16.3 KB/s | UP : 148.3 KB/s</p>
         </section>
 
         <!-- Storage Section -->
@@ -187,8 +187,8 @@
             <p>Stockage utilisé : 253 GiB</p>
             <p>Stockage libre : 221 GiB</p>
             <div class="progress-container">
-                <div class="progress-fill" style="width: 53.3%;"></div>
-                <span class="progress-text" style="left: 53.3%;">53.3%</span>
+                <div class="progress-fill" style="width: 53.31%;"></div>
+                <span class="progress-text" style="left: 53.31%;">53.31%</span>
             </div>
         </section>
 
@@ -199,17 +199,17 @@
                 <div class="pie-chart" style="background: conic-gradient(gray 0% 100%);"></div>
 
                 <div class="legend">
-                    <p><span style="color:blue">■</span> 0 fichiers .txt</p>
-                    <p><span style="color:green">■</span> 0 fichiers .py</p>
-                    <p><span style="color:yellow">■</span> 0 fichiers .pdf</p>
-                    <p><span style="color:orange">■</span> 0 fichiers .jpg</p>
-                    <p><span style="color:purple">■</span> 0 fichiers .png</p>
-                    <p><span style="color:red">■</span> 0 fichiers .docx</p>
-                    <p><span style="color:cyan">■</span> 0 fichiers .xlsx</p>
-                    <p><span style="color:magenta">■</span> 0 fichiers .pptx</p>
-                    <p><span style="color:lime">■</span> 0 fichiers .mp3</p>
-                    <p><span style="color:pink">■</span> 0 fichiers .mp4</p>
-                    <p><span style="color:brown">■</span> 0 fichiers .zip</p>
+                    <p><span style="color:blue">■</span> 0 fichiers .txt | 0</p>
+                    <p><span style="color:green">■</span> 0 fichiers .py | 0</p>
+                    <p><span style="color:yellow">■</span> 0 fichiers .pdf | 0</p>
+                    <p><span style="color:orange">■</span> 0 fichiers .jpg | 0</p>
+                    <p><span style="color:purple">■</span> 0 fichiers .png | 0</p>
+                    <p><span style="color:red">■</span> 0 fichiers .docx | 0</p>
+                    <p><span style="color:cyan">■</span> 0 fichiers .xlsx | 0</p>
+                    <p><span style="color:magenta">■</span> 0 fichiers .pptx | 0</p>
+                    <p><span style="color:lime">■</span> 0 fichiers .mp3 | 0</p>
+                    <p><span style="color:pink">■</span> 0 fichiers .mp4 | 0</p>
+                    <p><span style="color:brown">■</span> 0 fichiers .zip | 0</p>
                 </div>
             </div>
         </section>
@@ -220,9 +220,9 @@
 
             <h3>Top 3 des processus les plus gourmands : </h3>
             <ol>
-                <li>PID: 0, Nom: System Idle Process, CPU: 79.4%, RAM: 0.0%</li>
-                <li>PID: 20576, Nom: python3.13.exe, CPU: 3.4%, RAM: 0.4%</li>
-                <li>PID: 24044, Nom: Code.exe, CPU: 2.6%, RAM: 2.4%</li>
+                <li>PID: 0, Nom: System Idle Process, CPU: 86.3%, RAM: 0.0%</li>
+                <li>PID: 26232, Nom: python3.13.exe, CPU: 3.6%, RAM: 0.4%</li>
+                <li>PID: 13248, Nom: vmmem, CPU: 2.3%, RAM: 0.0%</li>
             </ol>
 
             <table class="process-table">
@@ -294,7 +294,7 @@
 
                         <td
                             class="">
-                            1.1%
+                            1.4%
                         </td>
 
                     </tr>
@@ -321,7 +321,7 @@
 
                         <td
                             class="">
-                            0.1%
+                            0.0%
                         </td>
 
                         <td
@@ -348,8 +348,8 @@
                     </tr>
                     
                     <tr>
-                        <td>3088</td>
-                        <td>backgroundTaskHost.exe</td>
+                        <td>5568</td>
+                        <td>audiodg.exe</td>
 
                         <td
                             class="">
@@ -358,13 +358,13 @@
 
                         <td
                             class="">
-                            0.0%
+                            0.2%
                         </td>
 
                     </tr>
                     
                     <tr>
-                        <td>10968</td>
+                        <td>3088</td>
                         <td>backgroundTaskHost.exe</td>
 
                         <td
@@ -385,7 +385,7 @@
 
                         <td
                             class="">
-                            0.2%
+                            0.5%
                         </td>
 
                         <td
