--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Système</h2>
             <p>Nom de la machine : SP11-de-Nicolas</p>
             <p>Système d'exploitation : Windows-11-10.0.26200-SP0</p>
-            <p>Heure de démarrage : 2025-12-10 08:53:27.754018</p>
+            <p>Heure de démarrage : 2025-12-10 08:53:27.731383</p>
             <p>Uptime : </p>
             <p>Nombre d'utilisateurs connectés : 1</p>
         </section>
@@ -31,11 +31,11 @@
         <section>
             <h2>CPU</h2>
             <p>Nombre de cœurs : 12</p>
-            <p>Fréquence : 3.42 GHz</p>
+            <p>Fréquence : 1.19 GHz</p>
             <p>Utilisation :</p>
             <div class="progress-container">
-                <div class="progress-fill" style="width: 11.6%;"></div>
-                <span class="progress-text" style="left: 11.6%;">11.6%</span>
+                <div class="progress-fill" style="width: 21.9%;"></div>
+                <span class="progress-text" style="left: 21.9%;">21.9%</span>
             </div>
 
             <h3>Utilisation CPU par cœur</h3>
@@ -44,8 +44,8 @@
 
                 <label>N°0 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 46.9%;"></div>
-                    <span class="progress-text" style="left: 46.9%;">46.9%</span>
+                    <div class="progress-fill" style="width: 70.6%;"></div>
+                    <span class="progress-text" style="left: 70.6%;">70.6%</span>
                 </div>
 
             </div>
@@ -54,8 +54,8 @@
 
                 <label>N°1 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 33.3%;"></div>
-                    <span class="progress-text" style="left: 33.3%;">33.3%</span>
+                    <div class="progress-fill" style="width: 77.1%;"></div>
+                    <span class="progress-text" style="left: 77.1%;">77.1%</span>
                 </div>
 
             </div>
@@ -64,8 +64,8 @@
 
                 <label>N°2 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 6.2%;"></div>
-                    <span class="progress-text" style="left: 6.2%;">6.2%</span>
+                    <div class="progress-fill" style="width: 42.4%;"></div>
+                    <span class="progress-text" style="left: 42.4%;">42.4%</span>
                 </div>
 
             </div>
@@ -74,8 +74,8 @@
 
                 <label>N°3 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 6.2%;"></div>
-                    <span class="progress-text" style="left: 6.2%;">6.2%</span>
+                    <div class="progress-fill" style="width: 36.4%;"></div>
+                    <span class="progress-text" style="left: 36.4%;">36.4%</span>
                 </div>
 
             </div>
@@ -84,8 +84,8 @@
 
                 <label>N°4 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 0.0%;"></div>
-                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
+                    <div class="progress-fill" style="width: 16.1%;"></div>
+                    <span class="progress-text" style="left: 16.1%;">16.1%</span>
                 </div>
 
             </div>
@@ -94,8 +94,8 @@
 
                 <label>N°5 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 0.0%;"></div>
-                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
+                    <div class="progress-fill" style="width: 9.7%;"></div>
+                    <span class="progress-text" style="left: 9.7%;">9.7%</span>
                 </div>
 
             </div>
@@ -104,8 +104,8 @@
 
                 <label>N°6 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 0.0%;"></div>
-                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
+                    <div class="progress-fill" style="width: 26.3%;"></div>
+                    <span class="progress-text" style="left: 26.3%;">26.3%</span>
                 </div>
 
             </div>
@@ -114,8 +114,8 @@
 
                 <label>N°7 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 0.0%;"></div>
-                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
+                    <div class="progress-fill" style="width: 3.1%;"></div>
+                    <span class="progress-text" style="left: 3.1%;">3.1%</span>
                 </div>
 
             </div>
@@ -124,8 +124,8 @@
 
                 <label>N°8 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 0.0%;"></div>
-                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
+                    <div class="progress-fill" style="width: 9.4%;"></div>
+                    <span class="progress-text" style="left: 9.4%;">9.4%</span>
                 </div>
 
             </div>
@@ -166,18 +166,18 @@
         <section>
             <h2>Mémoire</h2>
             <p>RAM totale : 15.6 Go</p>
-            <p>RAM utilisé : 13.7 Go</p>
+            <p>RAM utilisé : 14.2 Go</p>
             <div class="progress-container">
-                <div class="progress-fill" style="width: 88.1%;"></div>
-                <span class="progress-text" style="left: 88.1%;">88.1%</span>
+                <div class="progress-fill" style="width: 90.7%;"></div>
+                <span class="progress-text" style="left: 90.7%;">90.7%</span>
             </div>
         </section>
 
         <!-- Network Section -->
         <section>
             <h2>Réseau</h2>
-            <p>Adresse IP : 10.121.72.62</p>
-            <p>DL : 16.3 KB/s | UP : 148.3 KB/s</p>
+            <p>Adresse IP : 10.10.11.125</p>
+            <p>DL : 4.3 KB/s | UP : 16.7 KB/s</p>
         </section>
 
         <!-- Storage Section -->
@@ -199,17 +199,17 @@
                 <div class="pie-chart" style="background: conic-gradient(gray 0% 100%);"></div>
 
                 <div class="legend">
-                    <p><span style="color:blue">■</span> 0 fichiers .txt | 0</p>
-                    <p><span style="color:green">■</span> 0 fichiers .py | 0</p>
-                    <p><span style="color:yellow">■</span> 0 fichiers .pdf | 0</p>
-                    <p><span style="color:orange">■</span> 0 fichiers .jpg | 0</p>
-                    <p><span style="color:purple">■</span> 0 fichiers .png | 0</p>
-                    <p><span style="color:red">■</span> 0 fichiers .docx | 0</p>
-                    <p><span style="color:cyan">■</span> 0 fichiers .xlsx | 0</p>
-                    <p><span style="color:magenta">■</span> 0 fichiers .pptx | 0</p>
-                    <p><span style="color:lime">■</span> 0 fichiers .mp3 | 0</p>
-                    <p><span style="color:pink">■</span> 0 fichiers .mp4 | 0</p>
-                    <p><span style="color:brown">■</span> 0 fichiers .zip | 0</p>
+                    <p><span style="color:blue">■</span> 0 fichiers .txt | 0.0 Mo</p>
+                    <p><span style="color:green">■</span> 0 fichiers .py | 0.0 Mo</p>
+                    <p><span style="color:yellow">■</span> 0 fichiers .pdf | 0.0 Mo</p>
+                    <p><span style="color:orange">■</span> 0 fichiers .jpg | 0.0 Mo</p>
+                    <p><span style="color:purple">■</span> 0 fichiers .png | 0.0 Mo</p>
+                    <p><span style="color:red">■</span> 0 fichiers .docx | 0.0 Mo</p>
+                    <p><span style="color:cyan">■</span> 0 fichiers .xlsx | 0.0 Mo</p>
+                    <p><span style="color:magenta">■</span> 0 fichiers .pptx | 0.0 Mo</p>
+                    <p><span style="color:lime">■</span> 0 fichiers .mp3 | 0.0 Mo</p>
+                    <p><span style="color:pink">■</span> 0 fichiers .mp4 | 0.0 Mo</p>
+                    <p><span style="color:brown">■</span> 0 fichiers .zip | 0.0 Mo</p>
                 </div>
             </div>
         </section>
@@ -220,9 +220,9 @@
 
             <h3>Top 3 des processus les plus gourmands : </h3>
             <ol>
-                <li>PID: 0, Nom: System Idle Process, CPU: 86.3%, RAM: 0.0%</li>
-                <li>PID: 26232, Nom: python3.13.exe, CPU: 3.6%, RAM: 0.4%</li>
-                <li>PID: 13248, Nom: vmmem, CPU: 2.3%, RAM: 0.0%</li>
+                <li>PID: 0, Nom: System Idle Process, CPU: 88.3%, RAM: 0.0%</li>
+                <li>PID: 13248, Nom: vmmem, CPU: 9.1%, RAM: 0.0%</li>
+                <li>PID: 21556, Nom: python3.13.exe, CPU: 4.4%, RAM: 0.4%</li>
             </ol>
 
             <table class="process-table">
@@ -278,7 +278,7 @@
 
                         <td
                             class="">
-                            0.4%
+                            0.3%
                         </td>
 
                     </tr>
@@ -294,7 +294,7 @@
 
                         <td
                             class="">
-                            1.4%
+                            1.2%
                         </td>
 
                     </tr>
@@ -385,7 +385,7 @@
 
                         <td
                             class="">
-                            0.5%
+                            0.2%
                         </td>
 
                         <td
