Updated README with the remaining informations

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Système</h2>
             <p>Nom de la machine : SP11-de-Nicolas</p>
             <p>Système d'exploitation : Windows-11-10.0.26200-SP0</p>
-            <p>Heure de démarrage : 2025-12-10 08:53:27.731383</p>
+            <p>Heure de démarrage : 2025-12-10 08:53:27.628174</p>
             <p>Uptime : </p>
             <p>Nombre d'utilisateurs connectés : 1</p>
         </section>
@@ -31,11 +31,11 @@
         <section>
             <h2>CPU</h2>
             <p>Nombre de cœurs : 12</p>
-            <p>Fréquence : 1.19 GHz</p>
+            <p>Fréquence : 1.92 GHz</p>
             <p>Utilisation :</p>
             <div class="progress-container">
-                <div class="progress-fill" style="width: 21.9%;"></div>
-                <span class="progress-text" style="left: 21.9%;">21.9%</span>
+                <div class="progress-fill" style="width: 25.2%;"></div>
+                <span class="progress-text" style="left: 25.2%;">25.2%</span>
             </div>
 
             <h3>Utilisation CPU par cœur</h3>
@@ -44,8 +44,8 @@
 
                 <label>N°0 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 70.6%;"></div>
-                    <span class="progress-text" style="left: 70.6%;">70.6%</span>
+                    <div class="progress-fill" style="width: 73.0%;"></div>
+                    <span class="progress-text" style="left: 73.0%;">73.0%</span>
                 </div>
 
             </div>
@@ -54,8 +54,8 @@
 
                 <label>N°1 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 77.1%;"></div>
-                    <span class="progress-text" style="left: 77.1%;">77.1%</span>
+                    <div class="progress-fill" style="width: 53.1%;"></div>
+                    <span class="progress-text" style="left: 53.1%;">53.1%</span>
                 </div>
 
             </div>
@@ -64,8 +64,8 @@
 
                 <label>N°2 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 42.4%;"></div>
-                    <span class="progress-text" style="left: 42.4%;">42.4%</span>
+                    <div class="progress-fill" style="width: 37.5%;"></div>
+                    <span class="progress-text" style="left: 37.5%;">37.5%</span>
                 </div>
 
             </div>
@@ -74,8 +74,8 @@
 
                 <label>N°3 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 36.4%;"></div>
-                    <span class="progress-text" style="left: 36.4%;">36.4%</span>
+                    <div class="progress-fill" style="width: 29.0%;"></div>
+                    <span class="progress-text" style="left: 29.0%;">29.0%</span>
                 </div>
 
             </div>
@@ -84,8 +84,8 @@
 
                 <label>N°4 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 16.1%;"></div>
-                    <span class="progress-text" style="left: 16.1%;">16.1%</span>
+                    <div class="progress-fill" style="width: 15.4%;"></div>
+                    <span class="progress-text" style="left: 15.4%;">15.4%</span>
                 </div>
 
             </div>
@@ -94,8 +94,8 @@
 
                 <label>N°5 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 9.7%;"></div>
-                    <span class="progress-text" style="left: 9.7%;">9.7%</span>
+                    <div class="progress-fill" style="width: 3.2%;"></div>
+                    <span class="progress-text" style="left: 3.2%;">3.2%</span>
                 </div>
 
             </div>
@@ -104,8 +104,8 @@
 
                 <label>N°6 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 26.3%;"></div>
-                    <span class="progress-text" style="left: 26.3%;">26.3%</span>
+                    <div class="progress-fill" style="width: 0.0%;"></div>
+                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
                 </div>
 
             </div>
@@ -114,8 +114,8 @@
 
                 <label>N°7 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 3.1%;"></div>
-                    <span class="progress-text" style="left: 3.1%;">3.1%</span>
+                    <div class="progress-fill" style="width: 0.0%;"></div>
+                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
                 </div>
 
             </div>
@@ -124,8 +124,8 @@
 
                 <label>N°8 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 9.4%;"></div>
-                    <span class="progress-text" style="left: 9.4%;">9.4%</span>
+                    <div class="progress-fill" style="width: 0.0%;"></div>
+                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
                 </div>
 
             </div>
@@ -144,8 +144,8 @@
 
                 <label>N°10 </label>
                 <div class="progress-container">
-                    <div class="progress-fill" style="width: 0.0%;"></div>
-                    <span class="progress-text" style="left: 0.0%;">0.0%</span>
+                    <div class="progress-fill" style="width: 6.2%;"></div>
+                    <span class="progress-text" style="left: 6.2%;">6.2%</span>
                 </div>
 
             </div>
@@ -168,8 +168,8 @@
             <p>RAM totale : 15.6 Go</p>
             <p>RAM utilisé : 14.2 Go</p>
             <div class="progress-container">
-                <div class="progress-fill" style="width: 90.7%;"></div>
-                <span class="progress-text" style="left: 90.7%;">90.7%</span>
+                <div class="progress-fill" style="width: 90.8%;"></div>
+                <span class="progress-text" style="left: 90.8%;">90.8%</span>
             </div>
         </section>
 
@@ -177,18 +177,18 @@
         <section>
             <h2>Réseau</h2>
             <p>Adresse IP : 10.10.11.125</p>
-            <p>DL : 4.3 KB/s | UP : 16.7 KB/s</p>
+            <p>DL : 0.0 KB/s | UP : 1.4 KB/s</p>
         </section>
 
         <!-- Storage Section -->
         <section>
             <h2>Stockage</h2>
             <p>Stockage total : 475 GiB</p>
-            <p>Stockage utilisé : 253 GiB</p>
-            <p>Stockage libre : 221 GiB</p>
+            <p>Stockage utilisé : 252 GiB</p>
+            <p>Stockage libre : 222 GiB</p>
             <div class="progress-container">
-                <div class="progress-fill" style="width: 53.31%;"></div>
-                <span class="progress-text" style="left: 53.31%;">53.31%</span>
+                <div class="progress-fill" style="width: 53.19%;"></div>
+                <span class="progress-text" style="left: 53.19%;">53.19%</span>
             </div>
         </section>
 
@@ -220,9 +220,9 @@
 
             <h3>Top 3 des processus les plus gourmands : </h3>
             <ol>
-                <li>PID: 0, Nom: System Idle Process, CPU: 88.3%, RAM: 0.0%</li>
-                <li>PID: 13248, Nom: vmmem, CPU: 9.1%, RAM: 0.0%</li>
-                <li>PID: 21556, Nom: python3.13.exe, CPU: 4.4%, RAM: 0.4%</li>
+                <li>PID: 0, Nom: System Idle Process, CPU: 86.4%, RAM: 0.0%</li>
+                <li>PID: 9716, Nom: Discord.exe, CPU: 4.5%, RAM: 3.5%</li>
+                <li>PID: 25944, Nom: python3.13.exe, CPU: 4.2%, RAM: 0.4%</li>
             </ol>
 
             <table class="process-table">
@@ -278,7 +278,7 @@
 
                         <td
                             class="">
-                            0.3%
+                            0.4%
                         </td>
 
                     </tr>
@@ -294,7 +294,7 @@
 
                         <td
                             class="">
-                            1.2%
+                            1.0%
                         </td>
 
                     </tr>
@@ -348,7 +348,7 @@
                     </tr>
                     
                     <tr>
-                        <td>5568</td>
+                        <td>16660</td>
                         <td>audiodg.exe</td>
 
                         <td
@@ -380,17 +380,17 @@
                     </tr>
                     
                     <tr>
-                        <td>23140</td>
-                        <td>BluetoothBatteryLevel.exe</td>
+                        <td>20812</td>
+                        <td>BioIso.exe</td>
 
                         <td
                             class="">
-                            0.2%
+                            0.0%
                         </td>
 
                         <td
                             class="">
-                            0.3%
+                            0.9%
                         </td>
 
                     </tr>
